# BotUiYaml

./: .gitignore  Makefile  README.md  TODO.md  TODO.txt  debug.yaml  docker-compose.yml  pyproject.toml  run.py  setup.py  teste.py  todo.txt
BotUi/: BotUI.py  BotUIApp.py  TODOS.txt
BotUi/actions/: FindAction.py  KeySelectionsAction.py  RunScriptAction.py  StopIfAction.py  UploadAction.py  WriteAction.py
BotUi/api/: app.py  models.py
BotUi/classes/: BotActionDispatcher.py  BotActions.py  BotConstants.py  BotMediaManager.py  BotTargetLocator.py  BotTargetResult.py  BotValidation.py  validation_models.py  validation_models_.py
BotUi/cli/: run.py
BotUi/config/: BotConstants.py
BotUi/core/: BotActionDispatcher.py  BotUI.py  BotUIApp.py  BotValidation.py  __init__.py
BotUi/debug/: BotDebugSession.py
BotUi/drivers/: PlaywrightDriver.py
BotUi/finders/: BotTargetLocator.py  BotTargetResult.py
BotUi/functions/: image_detection.py  image_functions.py  key_map.py  playwright_functions.py  selenium_functions.py  tests.py  utils.py
BotUi/media/: BotMediaManager.py
BotUi/utils/: utils.py
BotUi_Docs/: TODO.md
BotUi_Docs/actions/: FIND.md  KEYS_SELECTIONS.md  RUN_SCRIPT.md  STOP_IF.md  UPLOADE_FILE.md  WRITE.md
BotUi_Examples/: README.md  run.py
BotUi_Prompts/: todo.txt  version_1.md
BotUi_Setup/: Dockerfile  Dockerfile.api  Dockerfile.app  Dockerfile.bot  docker-compose.yml  entrypoint.sh
BotUi_Setup_Docker/: Dockerfile  Makefile  entrypoint.sh  setup.sh
BotUi_Setup_Local/: entrypoint.sh  setup.sh
scripts/: docker_for_wsl.sh
(+51 files in other folders)
